--- a/dados_cvm.ipynb
+++ b/dados_cvm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "86b174f8",
+   "id": "583b2827",
    "metadata": {},
    "source": [
     "# Projeto para buscar os dados de balanço das empresas listadas na CVM\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42060e61",
+   "id": "f8f62f60",
    "metadata": {},
    "source": [
     "## 1.Bibliotecas"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a241e105",
+   "id": "e6dbf313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba662ec2",
+   "execution_count": 3,
+   "id": "cc13e445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1bf073f",
+   "id": "f4d8a3a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Período de aquisição dos dados\n",
+    "\n",
+    "ano = range(2010, 2023)\n",
+    "url_base = 'https://dados.cvm.gov.br/dados/CIA_ABERTA/DOC/DFP/DADOS/'\n",
+    "\n",
+    "for ano in ano:\n",
+    "    download = requests.get(url_base + f\"dfp_cia_aberta_{ano}.zip\")"
+   ]
   }
  ],
  "metadata": {
