--- a/dados_cvm.ipynb
+++ b/dados_cvm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "583b2827",
+   "id": "f2756bbd",
    "metadata": {},
    "source": [
     "# Projeto para buscar os dados de balanço das empresas listadas na CVM\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8f62f60",
+   "id": "719188c6",
    "metadata": {},
    "source": [
     "## 1.Bibliotecas"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e6dbf313",
+   "id": "31814988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cc13e445",
+   "id": "ea5f5aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d8a3a3",
+   "id": "03680a67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,18 @@
     "url_base = 'https://dados.cvm.gov.br/dados/CIA_ABERTA/DOC/DFP/DADOS/'\n",
     "\n",
     "for ano in ano:\n",
-    "    download = requests.get(url_base + f\"dfp_cia_aberta_{ano}.zip\")"
+    "    download = requests.get(url_base + f\"dfp_cia_aberta_{ano}.zip\")\n",
+    "    \n",
+    "    open(f\"dfp_cia_aberta_{ano}.zip\", \"wb\").write(download.content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1321cd19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
