--- a/dados_cvm.ipynb
+++ b/dados_cvm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fcd43217",
+   "id": "3e4cf930",
    "metadata": {},
    "source": [
     "# Projeto para buscar os dados de balanço das empresas listadas na CVM\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f53b1f18",
+   "id": "240bde7f",
    "metadata": {},
    "source": [
     "## 1. Bibliotecas"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a1a2a184",
+   "id": "c4461463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72285709",
+   "id": "f81d213d",
    "metadata": {},
    "source": [
     "## 2. Configurando os acessos"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7483e574",
+   "id": "0b75e60b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7675c8be",
+   "id": "eb43025c",
    "metadata": {},
    "source": [
     "### 2.1 Obtendo os dados"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d5f32a12",
+   "id": "8cabdb28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28c7915e",
+   "id": "5e0a1137",
    "metadata": {},
    "source": [
     "### 2.2 Concatenando as informações"
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ef6492d6",
+   "id": "c15ff518",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "50352c08",
+   "id": "3e0cd430",
    "metadata": {},
    "outputs": [
     {
@@ -522,19 +522,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9602dc8e",
+   "id": "0e5975cc",
    "metadata": {},
    "source": [
-    "## 3.0 Tratando a base de dados"
+    "## 3.0 Tratando da base de dados"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83133c95",
+   "id": "6185a49e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Separando a coluna 'GRUPO_DFP' que trás duas informaçõe concatenadas\n",
+    "base_dados[['con_ind', 'tipo_item']] = base_dados['GRUPO_DFP'].str.split(\"-\", expand = True) #separando no '-' e armazenando em 2 variáveis\n",
+    "dase_dados['con_ind'] = base_dados['con_ind'].str.strip() #apagando os espaços em brando antes e após o hífen\n",
+    "dase_dados['tipo_item'] = base_dados['tipo_item'].str.strip() #apagando os espaços em brando antes e após o hífen\n",
+    "\n",
+    "#Os dados constam o 'ÚLTIMO' e o 'PENÚLTIMO' balanço, como estes não interessam para a análise, serão excluídos.\n",
+    "base_dados = base_dados[base_dados['ORDEM_EXERC'] != 'PENÚLTIMO']"
+   ]
   }
  ],
  "metadata": {
